Add Spring Boot starter dependency and update security versions; fix URL handling in ClerkJwksProvider and correct Authorization header typo in ClerkJwtAuthFilter.